dump1090-mutability (1.08.2302.14+1mu-3) UNRELEASED; urgency=medium

  * Ask about json interval before json dir and skip the dir question if
    the interval is disabled, it makes more sense that way.
  * Be much more cautious about missing config settings so we don't explode
    so badly if something is omitted.
  * Use the package version as the version number compiled into the binary.

 -- Oliver Jowett <oliver@mutability.co.uk>  Wed, 10 Dec 2014 02:01:27 +0000

dump1090-mutability (1.08.2302.14+1mu-2) unstable; urgency=medium

  * Fix a memory leak from use of realpath() in HTTP request processing.
  * Add direct support for FATSV-format output, adapted from the FlightAware
    fork.
  * Big rearrangement of configuration to add debconf support.
  * Update Build-Depends based on glitches found building under pbuilder.

 -- Oliver Jowett <oliver@mutability.co.uk>  Wed, 10 Dec 2014 01:06:56 +0000

dump1090-mutability (1.08.2302.14+1mu-1) unstable; urgency=medium

  * Initial release.

 -- Oliver Jowett <oliver@mutability.co.uk>  Sat, 06 Dec 2014 23:07:02 +0000