@@ -5,6 +5,8 @@ dump1090-mutability (1.08.2302.14+1mu-3) UNRELEASED; urgency=medium
   * Be much more cautious about missing config settings so we don't explode
     so badly if something is omitted.
   * Use the package version as the version number compiled into the binary.
+  * Add data/receiver.json (generated once) and support for it in script.js.
+  * Internal webserver rearrangement to support multiple json files.
 
  -- Oliver Jowett <oliver@mutability.co.uk>  Wed, 10 Dec 2014 02:01:27 +0000
 
